tests/tldk/error/error-tldk-test-error22.pkt
// DO NOT delete or add line in this file
 
 // changing line 23 and 18, the last write return value changed in Linux.

// Establish a connection.
0   socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
+0  setsockopt(3, SOL_SOCKET, SO_REUSEADDR, [1], 4) = 0
+0  bind(3, ..., ...) = 0
+0  listen(3, 1) = 0
+0  < S 0:0(0) win 32792
+0 ~ +1  > S. 0:0(0) ack 1 <...>
+.1 < . 1:1(0) ack 1 win 32792
+0.2 accept(3, ..., ...) = 4
+0.1 fcntl(4, F_SETFL, O_RDWR|O_NONBLOCK) = 0

+0 < . 1:1001(1000) ack 1 win 27510 

+0 < . 1001:2001(1000) ack 1 win 27510 

+0 < F. 2001:2001(0) ack 1 win 30569 
+0 < . 2001:3001(1000) ack 1 win 45489

+0.1 write(4, ..., 1000) =  1000
